tests/paczka1/fuzzy1/11793339.err
Error in line 4: S429 S429 59,49
Error in line 1: N0B4AtrK8n1 S429 96,7
Error in line 6: S429 S429 233,6
Error in line 18: S429 S291 13,2
Error in line 16: Moaa S429 48,0
Error in line 24: hEuYX S521 72,1
Error in line 35: hEuYX A559 94,4
Error in line 36: N0B4AtrK8n1 A559 74,2
Error in line 37: hEuYX S429 62,6
